harden tests (#1298)